fixed some missing tests, changed testing command to default to all tests if no options are passed